--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
+        "drupal/redis": "^1.5",
         "drush-ops/behat-drush-endpoint": "^9.4",
         "drush/drush": "^10",
         "pantheon-upstreams/upstream-configuration": "*"
